--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "dotenv-cli": "^7.1.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
