--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "dependencies": {
     "@prisma/client": "^4.11.0",
     "@reduxjs/toolkit": "^1.9.3",
-    "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
@@ -32,13 +31,18 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.1-snapshot.1",
     "react-redux": "^8.0.5",
-    "typescript": "5.0.2",
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
