--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.1-snapshot.1",
     "react-redux": "^8.0.5",
+    "reduxjs-toolkit-persist": "^7.2.1",
     "yup": "^1.0.2"
   },
   "devDependencies": {
