--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
+    "iconoir-react": "^6.6.0",
     "next": "13.2.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
