--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.11.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react": "18.0.28",
