--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
+    "@next/font": "^13.4.0",
     "@prisma/client": "^4.11.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react": "18.0.28",
