--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@next/font": "^13.4.0",
     "@prisma/client": "^4.11.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
@@ -28,7 +30,7 @@
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
     "iconoir-react": "^6.6.0",
-    "next": "13.2.4",
+    "next": "^13.2.4",
     "next-auth": "^4.22.1",
     "next-redux-wrapper": "^8.1.0",
     "nodemailer": "^6.9.1",
@@ -36,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "reduxjs-toolkit-persist": "^7.2.1",
+    "stripe": "^12.5.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
