add styles to checkout form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "src/utils/svgTextReplace.js",
     "src/components/Home/Hero.tsx",
     "src/components/stripe/CheckoutForm.jsx",
-    "src/pages/pages/stripe/payment.jsx"
+    "src/pages/pages/stripe/payment.tsx"
   ],
   "exclude": ["node_modules"]
 }
