--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "db:seed": "npx dotenv -e .env.local -- prisma db seed",
     "prisma:generate": "npx dotenv -e .env.local -- prisma generate",
     "prisma:studio": "npx dotenv -e .env.local -- prisma studio",
-    "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
+    "production:build": "npx prisma generate && npx prisma migrate deploy && next build",
+    "prisma:format": "npx dotenv -e .env.local -- prisma format"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
