--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@types/node": "^18.15.11",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
