setup sendgrid email confirmation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "src/utils/svgTextReplace.js",
     "src/components/Home/Hero.tsx",
     "src/components/stripe/CheckoutForm.jsx",
-    "src/pages/pages/stripe/payment.tsx"
-, "src/pages/api/v1/order/confirm-order/[...orderId].ts"  ],
+    "src/pages/pages/stripe/payment.tsx",
+    "src/pages/api/v1/order/confirm-order/[...orderId].ts"
+  ],
   "exclude": ["node_modules"]
 }
