--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@next/font": "^13.4.0",
     "@prisma/client": "^4.11.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@sendgrid/mail": "^7.7.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@vercel/postgres": "^0.3.1",
     "axios": "^1.4.0",
     "dotenv-cli": "^7.1.0",
     "eslint": "8.36.0",
