--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
-    "build": {
-        "optimize": {
-            "exclude": [
-                "node_modules/iconoir-react/**"
-            ]
-        }
+  "build": {
+    "optimize": {
+      "exclude": ["node_modules/iconoir-react/**"]
     }
+  },
+  "env": {
+    "VERCEL_MAX_ASSETS": "100000"
+  }
 }
