--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "formik": "^2.2.9",
-    "iconoir-react": "^6.6.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "next-redux-wrapper": "^8.1.0",
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
     "reduxjs-toolkit-persist": "^7.2.1",
     "stripe": "^12.5.0",
